<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kalandlabor.hu.rhythmiccolors.MainActivity"
    android:orientation="horizontal"
    android:weightSum="1">

    <GridLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical|fill_horizontal"
        android:columnCount="1"
        android:rowCount="6"
        android:orientation="horizontal"
        android:layout_weight="0.75">
    <Button
        android:layout_marginTop="3dp"
    android:text="@string/color_scheme1"
    android:id="@+id/button1"
        android:background="@color/colorPrimary"
        android:layout_gravity="fill_horizontal"
        android:onClick="onClick"
    />


    <Button
        android:text="@string/color_scheme2"
        android:id="@+id/button2"
        android:layout_marginTop="3dp"
        android:background="@color/spring1"
        android:layout_gravity="fill_horizontal"
        android:onClick="onClick2"

    />

    <Button
    android:text="@string/color_scheme3"
    android:id="@+id/button3"
        android:layout_marginTop="3dp"
        android:background="@android:color/holo_red_light"
        android:layout_gravity="fill_horizontal"
        android:onClick="onClick3"
    />

    <Button
    android:text="@string/color_scheme4"
    android:id="@+id/button4"
        android:layout_marginTop="3dp"
        android:background="@android:color/holo_green_dark"
        android:layout_gravity="fill_horizontal"
        android:onClick="onClick4"
        />

    <Button
    android:text="@string/color_scheme5"
    android:id="@+id/button5"
        android:layout_marginTop="3dp"
        android:background="@android:color/darker_gray"
        android:layout_gravity="fill_horizontal"
        android:onClick="onClick5"
    />

    <Button
    android:text="@string/color_scheme6"
    android:id="@+id/button6"
        android:layout_marginTop="3dp"
        android:background="@android:color/holo_green_light"
        android:layout_gravity="fill_horizontal"
        android:onClick="onClick6"
    />

    </GridLayout>
</LinearLayout>
